mas tests